{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 44,
  "lineage": "d61c5809-3de8-363a-e649-53fa17fec647",
  "resources": [
    {
      "module": "module.firewall_policy",
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_learn_private_ranges_enabled": false,
            "base_policy_id": "",
            "child_policies": [],
            "dns": [],
            "explicit_proxy": [],
            "firewalls": [],
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-firewall-policy-test/providers/Microsoft.Network/firewallPolicies/firewall-policy",
            "identity": [],
            "insights": [],
            "intrusion_detection": [],
            "location": "westeurope",
            "name": "firewall-policy",
            "private_ip_ranges": [],
            "resource_group_name": "dtf-firewall-policy-test",
            "rule_collection_groups": [
              "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-firewall-policy-test/providers/Microsoft.Network/firewallPolicies/firewall-policy/ruleCollectionGroups/test-network-group"
            ],
            "sku": "Standard",
            "sql_redirect_allowed": null,
            "tags": {
              "CreationDateTime": "2023-07-30T11:02:03.4674847Z",
              "Environment": "Dev"
            },
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test_rg"
          ]
        }
      ]
    },
    {
      "module": "module.firewall_policy",
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "application_rule_collection_groups",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "test-network-group",
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [
              {
                "action": "Allow",
                "name": "test-collection",
                "priority": 200,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": null,
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "*"
                    ],
                    "destination_urls": null,
                    "name": "test-rule",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": null,
                    "terminate_tls": false,
                    "web_categories": null
                  }
                ]
              }
            ],
            "firewall_policy_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-firewall-policy-test/providers/Microsoft.Network/firewallPolicies/firewall-policy",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-firewall-policy-test/providers/Microsoft.Network/firewallPolicies/firewall-policy/ruleCollectionGroups/test-network-group",
            "name": "test-network-group",
            "nat_rule_collection": [],
            "network_rule_collection": [],
            "priority": 100,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firewall_policy.azurerm_firewall_policy.policy"
          ]
        }
      ]
    },
    {
      "module": "module.firewall_policy",
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "nat_rule_collection_groups",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "test-network-group",
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [],
            "firewall_policy_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-firewall-policy-test/providers/Microsoft.Network/firewallPolicies/firewall-policy",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-firewall-policy-test/providers/Microsoft.Network/firewallPolicies/firewall-policy/ruleCollectionGroups/test-network-group",
            "name": "test-network-group",
            "nat_rule_collection": [
              {
                "action": "Dnat",
                "name": "test-collection",
                "priority": 100,
                "rule": [
                  {
                    "destination_address": "10.0.0.0",
                    "destination_ports": [
                      "443"
                    ],
                    "name": "test-rule",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": [],
                    "translated_address": "10.0.0.1",
                    "translated_fqdn": "",
                    "translated_port": 443
                  }
                ]
              }
            ],
            "network_rule_collection": [],
            "priority": 300,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test_rg",
            "module.firewall_policy.azurerm_firewall_policy.policy"
          ]
        }
      ]
    },
    {
      "module": "module.firewall_policy",
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "network_rule_collection_groups",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "test-network-group",
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [],
            "firewall_policy_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-firewall-policy-test/providers/Microsoft.Network/firewallPolicies/firewall-policy",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-firewall-policy-test/providers/Microsoft.Network/firewallPolicies/firewall-policy/ruleCollectionGroups/test-network-group",
            "name": "test-network-group",
            "nat_rule_collection": [],
            "network_rule_collection": [
              {
                "action": "Allow",
                "name": "test-collection",
                "priority": 100,
                "rule": [
                  {
                    "destination_addresses": [
                      "*"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "*"
                    ],
                    "name": "test-rule",
                    "protocols": [
                      "Any"
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": null
                  }
                ]
              }
            ],
            "priority": 100,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firewall_policy.azurerm_firewall_policy.policy"
          ]
        }
      ]
    }
  ]
}